fix the uneven gap in gallery

--- a/src/components/Cover/Cover.css
+++ b/src/components/Cover/Cover.css
@@ -8,10 +8,6 @@
     url("../../fonts/SmokeAttack.ttf") format("truetype");
 }
 
-.videocontainer {
-  width: 100vw;
-}
-
 video {
   width: 100vw;
   height: 100vh;
